various upgrades (including Spring Boot 3), and inlining of navbar more items